Revision history for Bot::IRC::X::ManagementSpeak

{{$NEXT}}
        - Update Travis YAML
        - Adding Perl versions to test; annual general update for 2018

1.01      2016-11-10 18:39:23-08:00 America/Los_Angeles
        - First version, released on an unsuspecting world